Fix collapsable sidebar menus

--- a/backend/app/assets/stylesheets/spree/backend/components/_sidebar.scss
+++ b/backend/app/assets/stylesheets/spree/backend/components/_sidebar.scss
@@ -22,7 +22,8 @@
           padding-right: 5px;
         }
 
-        .icon-chevron-left {
+        .icon-chevron-left,
+        .icon-chevron-down {
           font-size: .5rem;
           line-height: 2;
           right: 5px;
